--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/platform-server": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@azure/msal-node": "^1.0.3",
     "@nguniversal/express-engine": "^11.2.1",
     "angular-in-memory-web-api": "~0.11.0",
     "express": "^4.15.2",
